message thread popups are styled and scrollbar/height issue is resolved with a temporary solution but might need refactor

--- a/public/style.css
+++ b/public/style.css
@@ -53,10 +53,11 @@ body, html {
   width: 100%;
   padding-top: 0.5em;
   overflow-y: scroll;
-  height: 100%;
+  height: 80vh;
+  margin-bottom: 3em;
 }
 
-.thread-LI {
+.threads-LI {
   display: block;
   text-overflow: ellipsis;
   word-wrap: break-word;
@@ -67,11 +68,11 @@ body, html {
   padding-left: 0.75em;
 }
 
-.thread-LI:hover {
+.threads-LI:hover {
   background-color: #ededed;
 }
 
-.from-address {
+.threads-from-address {
   margin-right: 1.6em;
   max-width: 11em;
   min-width: 11em;
@@ -80,9 +81,10 @@ body, html {
   overflow: hidden;
   text-overflow: clip;
   font-weight: bold;
+  z-index: 1;
 }
 
-.subject-line {
+.threads-subject-line {
   padding-right: 1.6em;
   position: relative;
   font-weight: bold;
@@ -90,27 +92,36 @@ body, html {
   text-overflow: clip;
 }
 
-.thread-snippet {
+.threads-snippet {
   position: relative;
   width: auto;
   overflow: hidden;
   text-overflow: clip;
 }
 
-.thread-container {
+.threads-container {
   overflow-wrap: break-word;
 }
 
 .thread {
-  border: 10px solid orange;
+  border-left: 1px solid black;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  left: 28em;
+  top: 4em;
+  z-index: 1;
+  background-color: white;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
-.thread-subject {
-
+.thread-subject-line {
+  font-weight: bold;
 }
 
 .message-body {
-  border: 3px solid blue;
+  margin-bottom: 1.5em;
 }
 
 .message-body-from-address {
@@ -122,7 +133,7 @@ body, html {
 }
 
 .message-header {
-  border: 3px solid green;
+
 }
 
 .message-header-from-address {
@@ -142,7 +153,7 @@ body, html {
   align-items: center;
   height: 4em;
   background-color: #ededed;
-  z-index: 1;
+  z-index: 2;
   border-bottom: 1px solid black;
 }
 
